src/main/java/com/example/tastefulai/global/error/exception/ServiceUnavailableException.java
package com.example.tastefulai.global.error.exception;

public class ServiceUnavailableException extends RuntimeException {

    public ServiceUnavailableException(String message) {
        super(message);
    }
}
